{{$NEXT}}

0.023     2024-10-26 20:30:20-07:00 America/Los_Angeles

    - t/honor_env_in_non_tty.t requires Test2::Tools::Tiny >= 1.30297;
      use Test::More if not available

0.022     2024-08-06 11:40:22-07:00 America/Los_Angeles

    - Some initial support for non-ASCII systems

0.021     2024-08-06 10:37:21-07:00 America/Los_Angeles

    - Fix warnings in HashBase.t

0.020     2024-08-05 07:11:23-07:00 America/Los_Angeles

    - Fix test broken on Test::More

0.019     2024-08-05 07:07:59-07:00 America/Los_Angeles

    - Fix use cycle between Test-Simple and Term::Table now that Test2::Suite was merged into Test-Simple

0.018     2023-10-22 21:55:51-07:00 America/Los_Angeles

    - Merged doc fix PR

0.017     2023-09-13 10:41:08-07:00 America/Los_Angeles

    - Remove 'Importer' dependency

0.016     2022-01-03 12:56:51-08:00 America/Los_Angeles

    - Be explicit about bareword filehandles

0.015     2019-11-18 15:58:23-08:00 America/Los_Angeles

    - Update inlined Object::HashBase

0.014     2019-10-15 16:54:41-07:00 America/Los_Angeles

    - Clone STDOUT on load in case it gets changed later

0.013     2018-12-04 11:38:36-08:00 America/Los_Angeles

    - Minor fixes

0.012     2017-10-11 08:54:52-07:00 America/Los_Angeles

    - Bump minimum Test2::Tools::Tiny version

0.011     2017-10-09 12:52:32-07:00 America/Los_Angeles

    - Honor the env variable even on non-term output

0.010     2017-10-03 09:41:46-07:00 America/Los_Angeles

    - No changes since trial

0.009     2017-09-18 20:51:26-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Further optimize term_size when SIGWINCH is supported

0.008     2017-03-17 10:08:18-07:00 America/Los_Angeles

    - Prefer Term::Size::Any over Term::ReadKey
    - Do not use either if STDOUT is not a terminal

0.007     2017-03-08 20:15:13-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Remove stray line that was setting STDOUT to utf8 (wtf?)

0.006     2017-01-10 21:13:35-08:00 America/Los_Angeles
